proguard config doesn't drop much but works in repl

--- a/src/proguard/scala.config
+++ b/src/proguard/scala.config
@@ -13,17 +13,17 @@
 -basedirectory /scala/trunk/build/pack
 -injars       lib/scala-library.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-library.jar
--injars       lib/scala-compiler.jar(!META-INF/INDEX.LIST)
+-injars       lib/scala-compiler.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-compiler.jar
--injars       lib/scala-repl.jar(!META-INF/INDEX.LIST)
+-injars       lib/scala-repl.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-repl.jar
--injars       lib/scala-asm.jar(!META-INF/INDEX.LIST)
+-injars       lib/scala-asm.jar
 -outjars      /scala/trunk/build/shrunk/lib/scala-asm.jar
--injars       lib/jline.jar(!META-INF/INDEX.LIST)
+-injars       lib/jline.jar
 -outjars      /scala/trunk/build/shrunk/lib/jline.jar
--injars       lib/forkjoin.jar(!META-INF/INDEX.LIST)
+-injars       lib/forkjoin.jar
 -outjars      /scala/trunk/build/shrunk/lib/forkjoin.jar
--libraryjars  /scala/trunk/lib_managed/jars/org.fusesource.jansi/jansi/jansi-1.4.jar
+-libraryjars  /inst/jar/jansi-1.8.jar
 -libraryjars  <java.home>/lib/rt.jar
 -libraryjars  /usr/share/java/ant-1.8.2/lib/ant.jar
 -printmapping proguard.map
@@ -38,54 +38,52 @@
 -keep class scala.math.*
 -keep class scala.runtime.*
 -keep class scala.reflect.**
-# -keep class scala.reflect.runtime.**
-# -keep class scala.reflect.api.**
-# -keep class scala.reflect.makro.**
-# -keep class scala.reflect.mirror.**
--keep class scala.tools.nsc.ClassLoaders
--keep class scala.collection.immutable.Nil*
--keep class scala.collection.generic.HasNewBuilder
-
-# -keep class **.*RunTime*
-# -keep class scala.Array*
-
-# -keep class scala.** 
-# -dontwarn scala.**
-# 
-# -keep public class * {
-#     public protected *;
-# }
-
--keepclasseswithmembers public class * {
-    *** main(java.lang.String[]);
-}
+-keep class **.*RunTime*
+-keep,allowoptimization,allowshrinking class *
 -keepclassmembers class * {
     ** MODULE$;
     *** bytes();
     public static *** *;
 }
-
--keepclassmembers class * implements java.io.Serializable {
-    static final long serialVersionUID;
-    private static final java.io.ObjectStreamField[] serialPersistentFields;
-    private void writeObject(java.io.ObjectOutputStream);
-    private void readObject(java.io.ObjectInputStream);
-    java.lang.Object writeReplace();
-    java.lang.Object readResolve();
+-keep public class * {
+    public protected *;
 }
 
--keepclassmembernames class scala.concurrent.forkjoin.ForkJoinPool {
-    long eventCount;
-    int  workerCounts;
-    int  runControl;
-}
-
--keepclassmembernames class scala.concurrent.forkjoin.ForkJoinWorkerThread {
-    int base;
-    int sp;
-    int runState;
-}
-
--keepclassmembernames class scala.concurrent.forkjoin.ForkJoinTask {
-    int status;
-}
+# -keep class scala.tools.nsc.ClassLoaders
+# -keep class scala.collection.immutable.Nil*
+# -keep class scala.collection.generic.HasNewBuilder
+# 
+# -keep class scala.Array*
+# -keep class scala.** 
+# -dontwarn scala.**
+# -keep public class * {
+#     public protected *;
+# }
+# 
+# -keepclasseswithmembers public class * {
+#     *** main(java.lang.String[]);
+# }
+# -keepclassmembers class * implements java.io.Serializable {
+#     static final long serialVersionUID;
+#     private static final java.io.ObjectStreamField[] serialPersistentFields;
+#     private void writeObject(java.io.ObjectOutputStream);
+#     private void readObject(java.io.ObjectInputStream);
+#     java.lang.Object writeReplace();
+#     java.lang.Object readResolve();
+# }
+# 
+# -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinPool {
+#     long eventCount;
+#     int  workerCounts;
+#     int  runControl;
+# }
+# 
+# -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinWorkerThread {
+#     int base;
+#     int sp;
+#     int runState;
+# }
+# 
+# -keepclassmembernames class scala.concurrent.forkjoin.ForkJoinTask {
+#     int status;
+# }
