File system watching.
val dirs = (
  io.Path("/scala/trunk/build/quick/classes").deepDirs.toList
    map (_.onEvent((p, k) => println(k + " " + p)))
)

TODO: separate out java7 specific capabilities somehow.

--- a/build.xml
+++ b/build.xml
@@ -130,6 +130,7 @@ INITIALISATION
   <target name="init.maven.jars" depends="init.maven.tasks">
     <artifact:dependencies pathId="dependency.classpath" filesetId="dependency.fileset">
       <dependency groupId="com.typesafe" artifactId="config" version="0.4.0"/>
+      <!-- <dependency groupId="com.typesafe.akka" artifactId="akka-actor" version="2.0.2"/> -->
       <!-- <dependency groupId="org.improving" artifactId="jvminfo" version="0.1.1" /> -->
     </artifact:dependencies>
   </target>
