expecty working within the compiler, except partest.
Includes demo crash.

% pscalac -d /tmp test/files/pos/t6563.scala

assert(sameLength(args2, params) || call.isErrorTyped, "mismatch " + clazz + " " + (params map (_.tpe)) + " " + args2)//debug
       |          |      |       |  |    |
       false      List() |       |  |    false
                         |       |  $anon.super.<init>()
                         |       false
                         List(value h)

--- a/build.xml
+++ b/build.xml
@@ -666,6 +666,7 @@ LOCAL REFERENCE BUILD (LOCKER)
         <compilerarg line="${javac.args} -XDignore.symbol.file"/>
         <classpath>
           <path refid="forkjoin.classpath"/>
+          <path refid="lib.extra"/>
           <pathelement location="${build-locker.dir}/classes/library"/>
         </classpath>
     </javac>
@@ -683,6 +684,7 @@ LOCAL REFERENCE BUILD (LOCKER)
       <compilationpath>
         <pathelement location="${build-locker.dir}/classes/library"/>
         <path refid="forkjoin.classpath"/>
+        <path refid="lib.extra"/>
       </compilationpath>
     </scalacfork>
     <propertyfile file="${build-locker.dir}/classes/library/library.properties">
