--- a/build.xml
+++ b/build.xml
@@ -199,6 +199,7 @@ PROPERTIES
 
   <!-- Additional command line arguments for scalac. They are added to all build targets -->
   <property name="scalac.args" value=""/>
+  <property name="scalac.args" value="-Xmacro-fallback-classpath ${lib-extra.dir}/expecty.jar"/>
   <property name="javac.args" value=""/>
 
   <!-- Sets location of pre-compiled libraries -->
@@ -452,10 +453,7 @@ INITIALISATION
 
     <path id="lib.extra">
       <!-- needs ant 1.7.1 -->
-      <!-- <fileset dir="${lib-extra.dir}" erroronmissingdir="false"> -->
-      <fileset dir="${lib-extra.dir}">
-        <include name="**/*.jar"/>
-      </fileset>
+      <fileset dir="${lib-extra.dir}" erroronmissingdir="false" />
     </path>
 
     <!-- Libraries only used for STARR -->
